exports[`invalid(1): a { opacity: -1; } 1`] = `

  1 | a { opacity: -1; }

`;

exports[`invalid(1): a { opacity: -1; } 2`] = `

Message:
> 1 | a { opacity: -1; }
    |              ^^ 'opacity' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(10): a { fill-opacity: 50; } 1`] = `

  1 | a { fill-opacity: 50; }

`;

exports[`invalid(10): a { fill-opacity: 50; } 2`] = `

Message:
> 1 | a { fill-opacity: 50; }
    |                   ^^ 'fill-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(100): a { color: alpha(from red / 50); } 1`] = `

  1 | a { color: alpha(from red / 50); }

`;

exports[`invalid(100): a { color: alpha(from red / 50); } 2`] = `

Message:
> 1 | a { color: alpha(from red / 50); }
    |                             ^^ 'alpha() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(101): a { color: hsl(0 -1% 50%); } 1`] = `

  1 | a { color: hsl(0 -1% 50%); }

`;

exports[`invalid(101): a { color: hsl(0 -1% 50%); } 2`] = `

Message:
> 1 | a { color: hsl(0 -1% 50%); }
    |                  ^^^ 'hsl() saturation' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(102): a { color: lab(150 0 0); } 1`] = `

  1 | a { color: lab(150 0 0); }

`;

exports[`invalid(102): a { color: lab(150 0 0); } 2`] = `

Message:
> 1 | a { color: lab(150 0 0); }
    |                ^^^ 'lab() lightness' evaluates to 150, which the browser clamps to 100.

`;

exports[`invalid(103): a { color: lch(-1% 0 0); } 1`] = `

  1 | a { color: lch(-1% 0 0); }

`;

exports[`invalid(103): a { color: lch(-1% 0 0); } 2`] = `

Message:
> 1 | a { color: lch(-1% 0 0); }
    |                ^^^ 'lch() lightness' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(104): a { color: lch(50 -1 0); } 1`] = `

  1 | a { color: lch(50 -1 0); }

`;

exports[`invalid(104): a { color: lch(50 -1 0); } 2`] = `

Message:
> 1 | a { color: lch(50 -1 0); }
    |                   ^^ 'lch() chroma' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(105): a { color: oklab(2 0 0); } 1`] = `

  1 | a { color: oklab(2 0 0); }

`;

exports[`invalid(105): a { color: oklab(2 0 0); } 2`] = `

Message:
> 1 | a { color: oklab(2 0 0); }
    |                  ^ 'oklab() lightness' evaluates to 2, which the browser clamps to 1.

`;

exports[`invalid(106): a { color: oklch(101% 0 0); } 1`] = `

  1 | a { color: oklch(101% 0 0); }

`;

exports[`invalid(106): a { color: oklch(101% 0 0); } 2`] = `

Message:
> 1 | a { color: oklch(101% 0 0); }
    |                  ^^^^ 'oklch() lightness' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(107): a { color: oklch(.5 -1 0); } 1`] = `

  1 | a { color: oklch(.5 -1 0); }

`;

exports[`invalid(107): a { color: oklch(.5 -1 0); } 2`] = `

Message:
> 1 | a { color: oklch(.5 -1 0); }
    |                     ^^ 'oklch() chroma' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(108): a { color: device-cmyk(2 0 0 0 / 50); } 1`] = `

  1 | a { color: device-cmyk(2 0 0 0 / 50); }

`;

exports[`invalid(108): a { color: device-cmyk(2 0 0 0 / 50); } 2`] = `

Message:
> 1 | a { color: device-cmyk(2 0 0 0 / 50); }
    |                        ^ 'device-cmyk() channel 1' evaluates to 2, which the browser clamps to 1.

`;

exports[`invalid(108): a { color: device-cmyk(2 0 0 0 / 50); } 3`] = `

Message:
> 1 | a { color: device-cmyk(2 0 0 0 / 50); }
    |                                  ^^ 'device-cmyk() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(109): a { color: color(--profile 2 0 0 / 50); } 1`] = `

  1 | a { color: color(--profile 2 0 0 / 50); }

`;

exports[`invalid(109): a { color: color(--profile 2 0 0 / 50); } 2`] = `

Message:
> 1 | a { color: color(--profile 2 0 0 / 50); }
    |                            ^ 'color() channel 1' evaluates to 2, which the browser clamps to 1.

`;

exports[`invalid(109): a { color: color(--profile 2 0 0 / 50); } 3`] = `

Message:
> 1 | a { color: color(--profile 2 0 0 / 50); }
    |                                    ^^ 'color() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(11): a { fill-opacity: -1%; } 1`] = `

  1 | a { fill-opacity: -1%; }

`;

exports[`invalid(11): a { fill-opacity: -1%; } 2`] = `

Message:
> 1 | a { fill-opacity: -1%; }
    |                   ^^^ 'fill-opacity' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(110): a { color: color(display-p3 2 -1 3 / 50); } 1`] = `

  1 | a { color: color(display-p3 2 -1 3 / 50); }

`;

exports[`invalid(110): a { color: color(display-p3 2 -1 3 / 50); } 2`] = `

Message:
> 1 | a { color: color(display-p3 2 -1 3 / 50); }
    |                                      ^^ 'color() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(111): a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); } 1`] = `

  1 | a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); }

`;

exports[`invalid(111): a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); } 2`] = `

Message:
> 1 | a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); }
    |                                     ^^^ 'rgb() red' evaluates to 300, which the browser clamps to 255.

`;

exports[`invalid(111): a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); } 3`] = `

Message:
> 1 | a { background: linear-gradient(rgb(300 0 0), light-dark(red, rgb(0 0 0 / 50))); }
    |                                                                           ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(112): a { color: color-mix(in srgb, rgb(300 0 0), blue); } 1`] = `

  1 | a { color: color-mix(in srgb, rgb(300 0 0), blue); }

`;

exports[`invalid(112): a { color: color-mix(in srgb, rgb(300 0 0), blue); } 2`] = `

Message:
> 1 | a { color: color-mix(in srgb, rgb(300 0 0), blue); }
    |                                   ^^^ 'rgb() red' evaluates to 300, which the browser clamps to 255.

`;

exports[`invalid(113): a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); } 1`] = `

  1 | a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); }

`;

exports[`invalid(113): a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); } 2`] = `

Message:
> 1 | a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); }
    |                ^^^^^^^^^^^^^^^ 'rgb() red' evaluates to 400, which the browser clamps to 255.

`;

exports[`invalid(113): a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); } 3`] = `

Message:
> 1 | a { color: rgb(calc(200 + 200) 0 0 / calc(25 + 25)); }
    |                                      ^^^^^^^^^^^^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(114): a { color: rgb(calc(10% / 20%) 0 0 / calc(30% / 10%)); } 1`] = `

  1 | a { color: rgb(calc(10% / 20%) 0 0 / calc(30% / 10%)); }

`;

exports[`invalid(114): a { color: rgb(calc(10% / 20%) 0 0 / calc(30% / 10%)); } 2`] = `

Message:
> 1 | a { color: rgb(calc(10% / 20%) 0 0 / calc(30% / 10%)); }
    |                                      ^^^^^^^^^^^^^^^ 'rgb() alpha' evaluates to 2.9999999999999996, which the browser clamps to 1.

`;

exports[`invalid(115): a { perspective: .5px; } 1`] = `

  1 | a { perspective: .5px; }

`;

exports[`invalid(115): a { perspective: .5px; } 2`] = `

Message:
> 1 | a { perspective: .5px; }
    |                  ^^^^ 'perspective' evaluates to 0.5px, which the browser clamps to 1px.

`;

exports[`invalid(116): a { perspective: 0; } 1`] = `

  1 | a { perspective: 0; }

`;

exports[`invalid(116): a { perspective: 0; } 2`] = `

Message:
> 1 | a { perspective: 0; }
    |                  ^ 'perspective' evaluates to 0px, which the browser clamps to 1px.

`;

exports[`invalid(117): a { perspective: 0em; } 1`] = `

  1 | a { perspective: 0em; }

`;

exports[`invalid(117): a { perspective: 0em; } 2`] = `

Message:
> 1 | a { perspective: 0em; }
    |                  ^^^ 'perspective' evaluates to 0px, which the browser clamps to 1px.

`;

exports[`invalid(118): a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); } 1`] = `

  1 | a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); }

`;

exports[`invalid(118): a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); } 2`] = `

Message:
> 1 | a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); }
    |                  ^^^^^^^^^ 'perspective' evaluates to 0px, which the browser clamps to 1px.

`;

exports[`invalid(118): a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); } 3`] = `

Message:
> 1 | a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); }
    |                                                    ^^^^^^^^^ 'perspective()' evaluates to 0px, which the browser clamps to 1px.

`;

exports[`invalid(118): a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); } 4`] = `

Message:
> 1 | a { perspective: calc(0px); transform: perspective(calc(0px)); text-decoration-thickness: calc(0px); }
    |                                                                                           ^^^^^^^^^ 'text-decoration-thickness' evaluates to 0px, which the browser floors to one device pixel.

`;

exports[`invalid(119): a { transform: perspective(.005in); } 1`] = `

  1 | a { transform: perspective(.005in); }

`;

exports[`invalid(119): a { transform: perspective(.005in); } 2`] = `

Message:
> 1 | a { transform: perspective(.005in); }
    |                            ^^^^^^ 'perspective()' evaluates to 0.48px, which the browser clamps to 1px.

`;

exports[`invalid(12): a { fill-opacity: 101%; } 1`] = `

  1 | a { fill-opacity: 101%; }

`;

exports[`invalid(12): a { fill-opacity: 101%; } 2`] = `

Message:
> 1 | a { fill-opacity: 101%; }
    |                   ^^^^ 'fill-opacity' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(120): a { perspective: calc(-1px); } 1`] = `

  1 | a { perspective: calc(-1px); }

`;

exports[`invalid(120): a { perspective: calc(-1px); } 2`] = `

Message:
> 1 | a { perspective: calc(-1px); }
    |                  ^^^^^^^^^^ 'perspective' evaluates to -1px, which the browser clamps to 1px.

`;

exports[`invalid(121): a { transform: perspective(calc(.25px + .25px)); } 1`] = `

  1 | a { transform: perspective(calc(.25px + .25px)); }

`;

exports[`invalid(121): a { transform: perspective(calc(.25px + .25px)); } 2`] = `

Message:
> 1 | a { transform: perspective(calc(.25px + .25px)); }
    |                            ^^^^^^^^^^^^^^^^^^^ 'perspective()' evaluates to 0.5px, which the browser clamps to 1px.

`;

exports[`invalid(122): a { border-image-slice: 110%; } 1`] = `

  1 | a { border-image-slice: 110%; }

`;

exports[`invalid(122): a { border-image-slice: 110%; } 2`] = `

Message:
> 1 | a { border-image-slice: 110%; }
    |                         ^^^^ 'border-image-slice' evaluates to 110%, which the browser clamps to 100%.

`;

exports[`invalid(123): a { mask-border-slice: 110%; } 1`] = `

  1 | a { mask-border-slice: 110%; }

`;

exports[`invalid(123): a { mask-border-slice: 110%; } 2`] = `

Message:
> 1 | a { mask-border-slice: 110%; }
    |                        ^^^^ 'mask-border-slice' evaluates to 110%, which the browser clamps to 100%.

`;

exports[`invalid(124): a { border-image: url(a) 110% / 200%; } 1`] = `

  1 | a { border-image: url(a) 110% / 200%; }

`;

exports[`invalid(124): a { border-image: url(a) 110% / 200%; } 2`] = `

Message:
> 1 | a { border-image: url(a) 110% / 200%; }
    |                          ^^^^ 'border-image-slice' evaluates to 110%, which the browser clamps to 100%.

`;

exports[`invalid(125): a { mask-border: url(a) 110% / 200%; } 1`] = `

  1 | a { mask-border: url(a) 110% / 200%; }

`;

exports[`invalid(125): a { mask-border: url(a) 110% / 200%; } 2`] = `

Message:
> 1 | a { mask-border: url(a) 110% / 200%; }
    |                         ^^^^ 'mask-border-slice' evaluates to 110%, which the browser clamps to 100%.

`;

exports[`invalid(126): a { border-image-slice: calc(50% + 60%); } 1`] = `

  1 | a { border-image-slice: calc(50% + 60%); }

`;

exports[`invalid(126): a { border-image-slice: calc(50% + 60%); } 2`] = `

Message:
> 1 | a { border-image-slice: calc(50% + 60%); }
    |                         ^^^^^^^^^^^^^^^ 'border-image-slice' evaluates to 110%, which the browser clamps to 100%.

`;

exports[`invalid(127): a { border-image-slice: calc(-1); mask-border-slice: calc(-1); } 1`] = `

  1 | a { border-image-slice: calc(-1); mask-border-slice: calc(-1); }

`;

exports[`invalid(127): a { border-image-slice: calc(-1); mask-border-slice: calc(-1); } 2`] = `

Message:
> 1 | a { border-image-slice: calc(-1); mask-border-slice: calc(-1); }
    |                         ^^^^^^^^ 'border-image-slice' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(127): a { border-image-slice: calc(-1); mask-border-slice: calc(-1); } 3`] = `

Message:
> 1 | a { border-image-slice: calc(-1); mask-border-slice: calc(-1); }
    |                                                      ^^^^^^^^ 'mask-border-slice' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(128): a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; } 1`] = `

  1 | a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; }

`;

exports[`invalid(128): a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; } 2`] = `

Message:
> 1 | a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; }
    |                          ^^^^^^^^ 'border-image-slice' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(128): a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; } 3`] = `

Message:
> 1 | a { border-image: url(a) calc(-1) / 1; mask-border: url(a) calc(-1) / 1; }
    |                                                            ^^^^^^^^ 'mask-border-slice' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(129): a { perspective: calc(-1em); transform: perspective(calc(-1em)); } 1`] = `

  1 | a { perspective: calc(-1em); transform: perspective(calc(-1em)); }

`;

exports[`invalid(129): a { perspective: calc(-1em); transform: perspective(calc(-1em)); } 2`] = `

Message:
> 1 | a { perspective: calc(-1em); transform: perspective(calc(-1em)); }
    |                  ^^^^^^^^^^ 'perspective' evaluates to -1em, which the browser clamps to 0em.

`;

exports[`invalid(129): a { perspective: calc(-1em); transform: perspective(calc(-1em)); } 3`] = `

Message:
> 1 | a { perspective: calc(-1em); transform: perspective(calc(-1em)); }
    |                                                     ^^^^^^^^^^ 'perspective()' evaluates to -1em, which the browser clamps to 0em.

`;

exports[`invalid(13): a { fill-opacity: calc(25 + 25); } 1`] = `

  1 | a { fill-opacity: calc(25 + 25); }

`;

exports[`invalid(13): a { fill-opacity: calc(25 + 25); } 2`] = `

Message:
> 1 | a { fill-opacity: calc(25 + 25); }
    |                   ^^^^^^^^^^^^^ 'fill-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(130): a { text-decoration-thickness: 0; } 1`] = `

  1 | a { text-decoration-thickness: 0; }

`;

exports[`invalid(130): a { text-decoration-thickness: 0; } 2`] = `

Message:
> 1 | a { text-decoration-thickness: 0; }
    |                                ^ 'text-decoration-thickness' evaluates to 0, which the browser floors to one device pixel.

`;

exports[`invalid(131): a { text-decoration-thickness: -1px; } 1`] = `

  1 | a { text-decoration-thickness: -1px; }

`;

exports[`invalid(131): a { text-decoration-thickness: -1px; } 2`] = `

Message:
> 1 | a { text-decoration-thickness: -1px; }
    |                                ^^^^ 'text-decoration-thickness' evaluates to -1px, which the browser floors to one device pixel.

`;

exports[`invalid(132): a { text-decoration: underline -1%; } 1`] = `

  1 | a { text-decoration: underline -1%; }

`;

exports[`invalid(132): a { text-decoration: underline -1%; } 2`] = `

Message:
> 1 | a { text-decoration: underline -1%; }
    |                                ^^^ 'text-decoration-thickness' evaluates to -1%, which the browser floors to one device pixel.

`;

exports[`invalid(133): a { text-decoration-thickness: calc(1px - 2px); } 1`] = `

  1 | a { text-decoration-thickness: calc(1px - 2px); }

`;

exports[`invalid(133): a { text-decoration-thickness: calc(1px - 2px); } 2`] = `

Message:
> 1 | a { text-decoration-thickness: calc(1px - 2px); }
    |                                ^^^^^^^^^^^^^^^ 'text-decoration-thickness' evaluates to -1px, which the browser floors to one device pixel.

`;

exports[`invalid(134): a { width: calc(-1px); } 1`] = `

  1 | a { width: calc(-1px); }

`;

exports[`invalid(134): a { width: calc(-1px); } 2`] = `

Message:
> 1 | a { width: calc(-1px); }
    |            ^^^^^^^^^^ 'width' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(135): a { width: calc(calc(-1px * 1px) / 1px); } 1`] = `

  1 | a { width: calc(calc(-1px * 1px) / 1px); }

`;

exports[`invalid(135): a { width: calc(calc(-1px * 1px) / 1px); } 2`] = `

Message:
> 1 | a { width: calc(calc(-1px * 1px) / 1px); }
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 'width' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(136): a { width: calc(-.00000001px); opacity: calc(-.00000001); } 1`] = `

  1 | a { width: calc(-.00000001px); opacity: calc(-.00000001); }

`;

exports[`invalid(136): a { width: calc(-.00000001px); opacity: calc(-.00000001); } 2`] = `

Message:
> 1 | a { width: calc(-.00000001px); opacity: calc(-.00000001); }
    |            ^^^^^^^^^^^^^^^^^^ 'width' evaluates to -1e-8px, which the browser clamps to 0px.

`;

exports[`invalid(136): a { width: calc(-.00000001px); opacity: calc(-.00000001); } 3`] = `

Message:
> 1 | a { width: calc(-.00000001px); opacity: calc(-.00000001); }
    |                                         ^^^^^^^^^^^^^^^^ 'opacity' evaluates to -1e-8, which the browser clamps to 0.

`;

exports[`invalid(137): a { opacity: calc(sin(1e-15deg) / 1e-18); } 1`] = `

  1 | a { opacity: calc(sin(1e-15deg) / 1e-18); }

`;

exports[`invalid(137): a { opacity: calc(sin(1e-15deg) / 1e-18); } 2`] = `

Message:
> 1 | a { opacity: calc(sin(1e-15deg) / 1e-18); }
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 'opacity' evaluates to 17.453292519943293, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(138): a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); } 1`] = `

  1 | a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); }

`;

exports[`invalid(138): a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); } 2`] = `

Message:
> 1 | a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); }
    |              ^^^^^^^^^^^^^^ 'opacity' evaluates to -1e-12, which the browser clamps to 0.

`;

exports[`invalid(138): a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); } 3`] = `

Message:
> 1 | a { opacity: -.000000000001; color: rgb(0 0 0 / 1.000000000001); }
    |                                                 ^^^^^^^^^^^^^^ 'rgb() alpha' evaluates to 1.000000000001, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(139): a { width: calc(-10%); } 1`] = `

  1 | a { width: calc(-10%); }

`;

exports[`invalid(139): a { width: calc(-10%); } 2`] = `

Message:
> 1 | a { width: calc(-10%); }
    |            ^^^^^^^^^^ 'width' evaluates to -10%, which the browser clamps to 0%.

`;

exports[`invalid(14): a { fill-opacity: min(110%, 120%); } 1`] = `

  1 | a { fill-opacity: min(110%, 120%); }

`;

exports[`invalid(14): a { fill-opacity: min(110%, 120%); } 2`] = `

Message:
> 1 | a { fill-opacity: min(110%, 120%); }
    |                   ^^^^^^^^^^^^^^^ 'fill-opacity' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(140): a { padding: calc(1px - 2px); } 1`] = `

  1 | a { padding: calc(1px - 2px); }

`;

exports[`invalid(140): a { padding: calc(1px - 2px); } 2`] = `

Message:
> 1 | a { padding: calc(1px - 2px); }
    |              ^^^^^^^^^^^^^^^ 'padding-top' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(141): a { border-image: url(a) 50% / calc(-1px); } 1`] = `

  1 | a { border-image: url(a) 50% / calc(-1px); }

`;

exports[`invalid(141): a { border-image: url(a) 50% / calc(-1px); } 2`] = `

Message:
> 1 | a { border-image: url(a) 50% / calc(-1px); }
    |                                ^^^^^^^^^^ 'border-image-width' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(142): a { font-weight: calc(1200); } 1`] = `

  1 | a { font-weight: calc(1200); }

`;

exports[`invalid(142): a { font-weight: calc(1200); } 2`] = `

Message:
> 1 | a { font-weight: calc(1200); }
    |                  ^^^^^^^^^^ 'font-weight' evaluates to 1200, which the browser clamps to 1000.

`;

exports[`invalid(143): a { animation-duration: calc(-1s); } 1`] = `

  1 | a { animation-duration: calc(-1s); }

`;

exports[`invalid(143): a { animation-duration: calc(-1s); } 2`] = `

Message:
> 1 | a { animation-duration: calc(-1s); }
    |                         ^^^^^^^^^ 'animation-duration' evaluates to -1s, which the browser clamps to 0s.

`;

exports[`invalid(144): a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); } 1`] = `

  1 | a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); }

`;

exports[`invalid(144): a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); } 2`] = `

Message:
> 1 | a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); }
    |                   ^^^^^^^^ 'column-count' evaluates to 0, which the browser clamps to 1.

`;

exports[`invalid(144): a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); } 3`] = `

Message:
> 1 | a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); }
    |                                      ^^^^^^^^ 'orphans' evaluates to 0, which the browser clamps to 1.

`;

exports[`invalid(144): a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); } 4`] = `

Message:
> 1 | a { column-count: calc(.4); orphans: calc(.4); widows: calc(.4); }
    |                                                        ^^^^^^^^ 'widows' evaluates to 0, which the browser clamps to 1.

`;

exports[`invalid(145): @font-face { font-family: test; src: url(a); font-weight: calc(1200); } 1`] = `

  1 | @font-face { font-family: test; src: url(a); font-weight: calc(1200); }

`;

exports[`invalid(145): @font-face { font-family: test; src: url(a); font-weight: calc(1200); } 2`] = `

Message:
> 1 | @font-face { font-family: test; src: url(a); font-weight: calc(1200); }
    |                                                           ^^^^^^^^^^ 'font-weight' evaluates to 1200, which the browser clamps to 1000.

`;

exports[`invalid(146): @position-try --test { width: calc(-1px); } 1`] = `

  1 | @position-try --test { width: calc(-1px); }

`;

exports[`invalid(146): @position-try --test { width: calc(-1px); } 2`] = `

Message:
> 1 | @position-try --test { width: calc(-1px); }
    |                               ^^^^^^^^^^ 'width' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(147): a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); } 1`] = `

  1 | a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); }

`;

exports[`invalid(147): a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); } 2`] = `

Message:
> 1 | a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); }
    |              ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(147): a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); } 3`] = `

Message:
> 1 | a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); }
    |                                                ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(147): a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); } 4`] = `

Message:
> 1 | a { OPACITY: 50 !important; color: RGB(0 0 0 / 50); filter: GRAYSCALE(50); }
    |                                                                       ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(148): a { WIDTH: CALC(-1px); opacity: MAX(2, 1); } 1`] = `

  1 | a { WIDTH: CALC(-1px); opacity: MAX(2, 1); }

`;

exports[`invalid(148): a { WIDTH: CALC(-1px); opacity: MAX(2, 1); } 2`] = `

Message:
> 1 | a { WIDTH: CALC(-1px); opacity: MAX(2, 1); }
    |            ^^^^^^^^^^ 'width' evaluates to -1px, which the browser clamps to 0px.

`;

exports[`invalid(148): a { WIDTH: CALC(-1px); opacity: MAX(2, 1); } 3`] = `

Message:
> 1 | a { WIDTH: CALC(-1px); opacity: MAX(2, 1); }
    |                                 ^^^^^^^^^ 'opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(149): a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); } 1`] = `

  1 | a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); }

`;

exports[`invalid(149): a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); } 2`] = `

Message:
> 1 | a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); }
    |                          ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(149): a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); } 3`] = `

Message:
> 1 | a { filter: \\67 rayscale(50); color: r\\67 b(0 0 0 / 50); }
    |                                                     ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(15): a { stroke-opacity: -1; } 1`] = `

  1 | a { stroke-opacity: -1; }

`;

exports[`invalid(15): a { stroke-opacity: -1; } 2`] = `

Message:
> 1 | a { stroke-opacity: -1; }
    |                     ^^ 'stroke-opacity' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(150): a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); } 1`] = `

  1 | a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); }

`;

exports[`invalid(150): a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); } 2`] = `

Message:
> 1 | a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); }
    |                         ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(150): a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); } 3`] = `

Message:
> 1 | a { opacity: /* keep */ 50; color: rgb(0 0 0 / /* keep */ 50); }
    |                                                           ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(151): @media (width > 1px) { @supports (display: grid) { a { opacity: 50; } } } 1`] = `

  1 | @media (width > 1px) { @supports (display: grid) { a { opacity: 50; } } }

`;

exports[`invalid(151): @media (width > 1px) { @supports (display: grid) { a { opacity: 50; } } } 2`] = `

Message:
> 1 | @media (width > 1px) { @supports (display: grid) { a { opacity: 50; } } }
    |                                                                 ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(152): @container (width > 1px) { @layer theme { @scope (.a) { .b { opacity: 50; } } } } 1`] = `

  1 | @container (width > 1px) { @layer theme { @scope (.a) { .b { opacity: 50; } } } }

`;

exports[`invalid(152): @container (width > 1px) { @layer theme { @scope (.a) { .b { opacity: 50; } } } } 2`] = `

Message:
> 1 | @container (width > 1px) { @layer theme { @scope (.a) { .b { opacity: 50; } } } }
    |                                                                       ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(153): a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } } 1`] = `

  1 | a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } }

`;

exports[`invalid(153): a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } } 2`] = `

Message:
> 1 | a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } }
    |                     ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(153): a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } } 3`] = `

Message:
> 1 | a { & .b { opacity: 50; } } @keyframes fade { to { filter: grayscale(50); } }
    |                                                                      ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(16): a { stroke-opacity: 2; } 1`] = `

  1 | a { stroke-opacity: 2; }

`;

exports[`invalid(16): a { stroke-opacity: 2; } 2`] = `

Message:
> 1 | a { stroke-opacity: 2; }
    |                     ^ 'stroke-opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(17): a { stroke-opacity: 50; } 1`] = `

  1 | a { stroke-opacity: 50; }

`;

exports[`invalid(17): a { stroke-opacity: 50; } 2`] = `

Message:
> 1 | a { stroke-opacity: 50; }
    |                     ^^ 'stroke-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(18): a { stroke-opacity: -1%; } 1`] = `

  1 | a { stroke-opacity: -1%; }

`;

exports[`invalid(18): a { stroke-opacity: -1%; } 2`] = `

Message:
> 1 | a { stroke-opacity: -1%; }
    |                     ^^^ 'stroke-opacity' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(19): a { stroke-opacity: 101%; } 1`] = `

  1 | a { stroke-opacity: 101%; }

`;

exports[`invalid(19): a { stroke-opacity: 101%; } 2`] = `

Message:
> 1 | a { stroke-opacity: 101%; }
    |                     ^^^^ 'stroke-opacity' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(2): a { opacity: 2; } 1`] = `

  1 | a { opacity: 2; }

`;

exports[`invalid(2): a { opacity: 2; } 2`] = `

Message:
> 1 | a { opacity: 2; }
    |              ^ 'opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(20): a { stroke-opacity: calc(25 + 25); } 1`] = `

  1 | a { stroke-opacity: calc(25 + 25); }

`;

exports[`invalid(20): a { stroke-opacity: calc(25 + 25); } 2`] = `

Message:
> 1 | a { stroke-opacity: calc(25 + 25); }
    |                     ^^^^^^^^^^^^^ 'stroke-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(21): a { stroke-opacity: min(110%, 120%); } 1`] = `

  1 | a { stroke-opacity: min(110%, 120%); }

`;

exports[`invalid(21): a { stroke-opacity: min(110%, 120%); } 2`] = `

Message:
> 1 | a { stroke-opacity: min(110%, 120%); }
    |                     ^^^^^^^^^^^^^^^ 'stroke-opacity' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(22): a { stop-opacity: -1; } 1`] = `

  1 | a { stop-opacity: -1; }

`;

exports[`invalid(22): a { stop-opacity: -1; } 2`] = `

Message:
> 1 | a { stop-opacity: -1; }
    |                   ^^ 'stop-opacity' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(23): a { stop-opacity: 2; } 1`] = `

  1 | a { stop-opacity: 2; }

`;

exports[`invalid(23): a { stop-opacity: 2; } 2`] = `

Message:
> 1 | a { stop-opacity: 2; }
    |                   ^ 'stop-opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(24): a { stop-opacity: 50; } 1`] = `

  1 | a { stop-opacity: 50; }

`;

exports[`invalid(24): a { stop-opacity: 50; } 2`] = `

Message:
> 1 | a { stop-opacity: 50; }
    |                   ^^ 'stop-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(25): a { stop-opacity: -1%; } 1`] = `

  1 | a { stop-opacity: -1%; }

`;

exports[`invalid(25): a { stop-opacity: -1%; } 2`] = `

Message:
> 1 | a { stop-opacity: -1%; }
    |                   ^^^ 'stop-opacity' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(26): a { stop-opacity: 101%; } 1`] = `

  1 | a { stop-opacity: 101%; }

`;

exports[`invalid(26): a { stop-opacity: 101%; } 2`] = `

Message:
> 1 | a { stop-opacity: 101%; }
    |                   ^^^^ 'stop-opacity' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(27): a { stop-opacity: calc(25 + 25); } 1`] = `

  1 | a { stop-opacity: calc(25 + 25); }

`;

exports[`invalid(27): a { stop-opacity: calc(25 + 25); } 2`] = `

Message:
> 1 | a { stop-opacity: calc(25 + 25); }
    |                   ^^^^^^^^^^^^^ 'stop-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(28): a { stop-opacity: min(110%, 120%); } 1`] = `

  1 | a { stop-opacity: min(110%, 120%); }

`;

exports[`invalid(28): a { stop-opacity: min(110%, 120%); } 2`] = `

Message:
> 1 | a { stop-opacity: min(110%, 120%); }
    |                   ^^^^^^^^^^^^^^^ 'stop-opacity' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(29): a { flood-opacity: -1; } 1`] = `

  1 | a { flood-opacity: -1; }

`;

exports[`invalid(29): a { flood-opacity: -1; } 2`] = `

Message:
> 1 | a { flood-opacity: -1; }
    |                    ^^ 'flood-opacity' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(3): a { opacity: 50; } 1`] = `

  1 | a { opacity: 50; }

`;

exports[`invalid(3): a { opacity: 50; } 2`] = `

Message:
> 1 | a { opacity: 50; }
    |              ^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(30): a { flood-opacity: 2; } 1`] = `

  1 | a { flood-opacity: 2; }

`;

exports[`invalid(30): a { flood-opacity: 2; } 2`] = `

Message:
> 1 | a { flood-opacity: 2; }
    |                    ^ 'flood-opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(31): a { flood-opacity: 50; } 1`] = `

  1 | a { flood-opacity: 50; }

`;

exports[`invalid(31): a { flood-opacity: 50; } 2`] = `

Message:
> 1 | a { flood-opacity: 50; }
    |                    ^^ 'flood-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(32): a { flood-opacity: -1%; } 1`] = `

  1 | a { flood-opacity: -1%; }

`;

exports[`invalid(32): a { flood-opacity: -1%; } 2`] = `

Message:
> 1 | a { flood-opacity: -1%; }
    |                    ^^^ 'flood-opacity' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(33): a { flood-opacity: 101%; } 1`] = `

  1 | a { flood-opacity: 101%; }

`;

exports[`invalid(33): a { flood-opacity: 101%; } 2`] = `

Message:
> 1 | a { flood-opacity: 101%; }
    |                    ^^^^ 'flood-opacity' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(34): a { flood-opacity: calc(25 + 25); } 1`] = `

  1 | a { flood-opacity: calc(25 + 25); }

`;

exports[`invalid(34): a { flood-opacity: calc(25 + 25); } 2`] = `

Message:
> 1 | a { flood-opacity: calc(25 + 25); }
    |                    ^^^^^^^^^^^^^ 'flood-opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(35): a { flood-opacity: min(110%, 120%); } 1`] = `

  1 | a { flood-opacity: min(110%, 120%); }

`;

exports[`invalid(35): a { flood-opacity: min(110%, 120%); } 2`] = `

Message:
> 1 | a { flood-opacity: min(110%, 120%); }
    |                    ^^^^^^^^^^^^^^^ 'flood-opacity' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(36): a { shape-image-threshold: -1; } 1`] = `

  1 | a { shape-image-threshold: -1; }

`;

exports[`invalid(36): a { shape-image-threshold: -1; } 2`] = `

Message:
> 1 | a { shape-image-threshold: -1; }
    |                            ^^ 'shape-image-threshold' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(37): a { shape-image-threshold: 2; } 1`] = `

  1 | a { shape-image-threshold: 2; }

`;

exports[`invalid(37): a { shape-image-threshold: 2; } 2`] = `

Message:
> 1 | a { shape-image-threshold: 2; }
    |                            ^ 'shape-image-threshold' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(38): a { shape-image-threshold: 50; } 1`] = `

  1 | a { shape-image-threshold: 50; }

`;

exports[`invalid(38): a { shape-image-threshold: 50; } 2`] = `

Message:
> 1 | a { shape-image-threshold: 50; }
    |                            ^^ 'shape-image-threshold' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(39): a { shape-image-threshold: -1%; } 1`] = `

  1 | a { shape-image-threshold: -1%; }

`;

exports[`invalid(39): a { shape-image-threshold: -1%; } 2`] = `

Message:
> 1 | a { shape-image-threshold: -1%; }
    |                            ^^^ 'shape-image-threshold' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(4): a { opacity: -1%; } 1`] = `

  1 | a { opacity: -1%; }

`;

exports[`invalid(4): a { opacity: -1%; } 2`] = `

Message:
> 1 | a { opacity: -1%; }
    |              ^^^ 'opacity' evaluates to -1%, which the browser clamps to 0%.

`;

exports[`invalid(40): a { shape-image-threshold: 101%; } 1`] = `

  1 | a { shape-image-threshold: 101%; }

`;

exports[`invalid(40): a { shape-image-threshold: 101%; } 2`] = `

Message:
> 1 | a { shape-image-threshold: 101%; }
    |                            ^^^^ 'shape-image-threshold' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(41): a { shape-image-threshold: calc(25 + 25); } 1`] = `

  1 | a { shape-image-threshold: calc(25 + 25); }

`;

exports[`invalid(41): a { shape-image-threshold: calc(25 + 25); } 2`] = `

Message:
> 1 | a { shape-image-threshold: calc(25 + 25); }
    |                            ^^^^^^^^^^^^^ 'shape-image-threshold' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(42): a { shape-image-threshold: min(110%, 120%); } 1`] = `

  1 | a { shape-image-threshold: min(110%, 120%); }

`;

exports[`invalid(42): a { shape-image-threshold: min(110%, 120%); } 2`] = `

Message:
> 1 | a { shape-image-threshold: min(110%, 120%); }
    |                            ^^^^^^^^^^^^^^^ 'shape-image-threshold' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(43): a { filter: grayscale(50); } 1`] = `

  1 | a { filter: grayscale(50); }

`;

exports[`invalid(43): a { filter: grayscale(50); } 2`] = `

Message:
> 1 | a { filter: grayscale(50); }
    |                       ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(44): a { filter: grayscale(150%); } 1`] = `

  1 | a { filter: grayscale(150%); }

`;

exports[`invalid(44): a { filter: grayscale(150%); } 2`] = `

Message:
> 1 | a { filter: grayscale(150%); }
    |                       ^^^^ 'grayscale() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(45): a { filter: grayscale(calc(-1)); } 1`] = `

  1 | a { filter: grayscale(calc(-1)); }

`;

exports[`invalid(45): a { filter: grayscale(calc(-1)); } 2`] = `

Message:
> 1 | a { filter: grayscale(calc(-1)); }
    |                       ^^^^^^^^ 'grayscale() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(46): a { filter: grayscale(calc(25 + 25)); } 1`] = `

  1 | a { filter: grayscale(calc(25 + 25)); }

`;

exports[`invalid(46): a { filter: grayscale(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { filter: grayscale(calc(25 + 25)); }
    |                       ^^^^^^^^^^^^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(47): a { backdrop-filter: grayscale(50); } 1`] = `

  1 | a { backdrop-filter: grayscale(50); }

`;

exports[`invalid(47): a { backdrop-filter: grayscale(50); } 2`] = `

Message:
> 1 | a { backdrop-filter: grayscale(50); }
    |                                ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(48): a { backdrop-filter: grayscale(150%); } 1`] = `

  1 | a { backdrop-filter: grayscale(150%); }

`;

exports[`invalid(48): a { backdrop-filter: grayscale(150%); } 2`] = `

Message:
> 1 | a { backdrop-filter: grayscale(150%); }
    |                                ^^^^ 'grayscale() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(49): a { backdrop-filter: grayscale(calc(-1)); } 1`] = `

  1 | a { backdrop-filter: grayscale(calc(-1)); }

`;

exports[`invalid(49): a { backdrop-filter: grayscale(calc(-1)); } 2`] = `

Message:
> 1 | a { backdrop-filter: grayscale(calc(-1)); }
    |                                ^^^^^^^^ 'grayscale() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(5): a { opacity: 101%; } 1`] = `

  1 | a { opacity: 101%; }

`;

exports[`invalid(5): a { opacity: 101%; } 2`] = `

Message:
> 1 | a { opacity: 101%; }
    |              ^^^^ 'opacity' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(50): a { backdrop-filter: grayscale(calc(25 + 25)); } 1`] = `

  1 | a { backdrop-filter: grayscale(calc(25 + 25)); }

`;

exports[`invalid(50): a { backdrop-filter: grayscale(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { backdrop-filter: grayscale(calc(25 + 25)); }
    |                                ^^^^^^^^^^^^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(51): a { -webkit-backdrop-filter: grayscale(50); } 1`] = `

  1 | a { -webkit-backdrop-filter: grayscale(50); }

`;

exports[`invalid(51): a { -webkit-backdrop-filter: grayscale(50); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: grayscale(50); }
    |                                        ^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(52): a { -webkit-backdrop-filter: grayscale(150%); } 1`] = `

  1 | a { -webkit-backdrop-filter: grayscale(150%); }

`;

exports[`invalid(52): a { -webkit-backdrop-filter: grayscale(150%); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: grayscale(150%); }
    |                                        ^^^^ 'grayscale() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(53): a { -webkit-backdrop-filter: grayscale(calc(-1)); } 1`] = `

  1 | a { -webkit-backdrop-filter: grayscale(calc(-1)); }

`;

exports[`invalid(53): a { -webkit-backdrop-filter: grayscale(calc(-1)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: grayscale(calc(-1)); }
    |                                        ^^^^^^^^ 'grayscale() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(54): a { -webkit-backdrop-filter: grayscale(calc(25 + 25)); } 1`] = `

  1 | a { -webkit-backdrop-filter: grayscale(calc(25 + 25)); }

`;

exports[`invalid(54): a { -webkit-backdrop-filter: grayscale(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: grayscale(calc(25 + 25)); }
    |                                        ^^^^^^^^^^^^^ 'grayscale() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(55): a { filter: invert(50); } 1`] = `

  1 | a { filter: invert(50); }

`;

exports[`invalid(55): a { filter: invert(50); } 2`] = `

Message:
> 1 | a { filter: invert(50); }
    |                    ^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(56): a { filter: invert(150%); } 1`] = `

  1 | a { filter: invert(150%); }

`;

exports[`invalid(56): a { filter: invert(150%); } 2`] = `

Message:
> 1 | a { filter: invert(150%); }
    |                    ^^^^ 'invert() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(57): a { filter: invert(calc(-1)); } 1`] = `

  1 | a { filter: invert(calc(-1)); }

`;

exports[`invalid(57): a { filter: invert(calc(-1)); } 2`] = `

Message:
> 1 | a { filter: invert(calc(-1)); }
    |                    ^^^^^^^^ 'invert() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(58): a { filter: invert(calc(25 + 25)); } 1`] = `

  1 | a { filter: invert(calc(25 + 25)); }

`;

exports[`invalid(58): a { filter: invert(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { filter: invert(calc(25 + 25)); }
    |                    ^^^^^^^^^^^^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(59): a { backdrop-filter: invert(50); } 1`] = `

  1 | a { backdrop-filter: invert(50); }

`;

exports[`invalid(59): a { backdrop-filter: invert(50); } 2`] = `

Message:
> 1 | a { backdrop-filter: invert(50); }
    |                             ^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(6): a { opacity: calc(25 + 25); } 1`] = `

  1 | a { opacity: calc(25 + 25); }

`;

exports[`invalid(6): a { opacity: calc(25 + 25); } 2`] = `

Message:
> 1 | a { opacity: calc(25 + 25); }
    |              ^^^^^^^^^^^^^ 'opacity' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(60): a { backdrop-filter: invert(150%); } 1`] = `

  1 | a { backdrop-filter: invert(150%); }

`;

exports[`invalid(60): a { backdrop-filter: invert(150%); } 2`] = `

Message:
> 1 | a { backdrop-filter: invert(150%); }
    |                             ^^^^ 'invert() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(61): a { backdrop-filter: invert(calc(-1)); } 1`] = `

  1 | a { backdrop-filter: invert(calc(-1)); }

`;

exports[`invalid(61): a { backdrop-filter: invert(calc(-1)); } 2`] = `

Message:
> 1 | a { backdrop-filter: invert(calc(-1)); }
    |                             ^^^^^^^^ 'invert() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(62): a { backdrop-filter: invert(calc(25 + 25)); } 1`] = `

  1 | a { backdrop-filter: invert(calc(25 + 25)); }

`;

exports[`invalid(62): a { backdrop-filter: invert(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { backdrop-filter: invert(calc(25 + 25)); }
    |                             ^^^^^^^^^^^^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(63): a { -webkit-backdrop-filter: invert(50); } 1`] = `

  1 | a { -webkit-backdrop-filter: invert(50); }

`;

exports[`invalid(63): a { -webkit-backdrop-filter: invert(50); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: invert(50); }
    |                                     ^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(64): a { -webkit-backdrop-filter: invert(150%); } 1`] = `

  1 | a { -webkit-backdrop-filter: invert(150%); }

`;

exports[`invalid(64): a { -webkit-backdrop-filter: invert(150%); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: invert(150%); }
    |                                     ^^^^ 'invert() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(65): a { -webkit-backdrop-filter: invert(calc(-1)); } 1`] = `

  1 | a { -webkit-backdrop-filter: invert(calc(-1)); }

`;

exports[`invalid(65): a { -webkit-backdrop-filter: invert(calc(-1)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: invert(calc(-1)); }
    |                                     ^^^^^^^^ 'invert() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(66): a { -webkit-backdrop-filter: invert(calc(25 + 25)); } 1`] = `

  1 | a { -webkit-backdrop-filter: invert(calc(25 + 25)); }

`;

exports[`invalid(66): a { -webkit-backdrop-filter: invert(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: invert(calc(25 + 25)); }
    |                                     ^^^^^^^^^^^^^ 'invert() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(67): a { filter: opacity(50); } 1`] = `

  1 | a { filter: opacity(50); }

`;

exports[`invalid(67): a { filter: opacity(50); } 2`] = `

Message:
> 1 | a { filter: opacity(50); }
    |                     ^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(68): a { filter: opacity(150%); } 1`] = `

  1 | a { filter: opacity(150%); }

`;

exports[`invalid(68): a { filter: opacity(150%); } 2`] = `

Message:
> 1 | a { filter: opacity(150%); }
    |                     ^^^^ 'opacity() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(69): a { filter: opacity(calc(-1)); } 1`] = `

  1 | a { filter: opacity(calc(-1)); }

`;

exports[`invalid(69): a { filter: opacity(calc(-1)); } 2`] = `

Message:
> 1 | a { filter: opacity(calc(-1)); }
    |                     ^^^^^^^^ 'opacity() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(7): a { opacity: min(110%, 120%); } 1`] = `

  1 | a { opacity: min(110%, 120%); }

`;

exports[`invalid(7): a { opacity: min(110%, 120%); } 2`] = `

Message:
> 1 | a { opacity: min(110%, 120%); }
    |              ^^^^^^^^^^^^^^^ 'opacity' evaluates to 1.1, which the browser clamps to 1.

`;

exports[`invalid(70): a { filter: opacity(calc(25 + 25)); } 1`] = `

  1 | a { filter: opacity(calc(25 + 25)); }

`;

exports[`invalid(70): a { filter: opacity(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { filter: opacity(calc(25 + 25)); }
    |                     ^^^^^^^^^^^^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(71): a { backdrop-filter: opacity(50); } 1`] = `

  1 | a { backdrop-filter: opacity(50); }

`;

exports[`invalid(71): a { backdrop-filter: opacity(50); } 2`] = `

Message:
> 1 | a { backdrop-filter: opacity(50); }
    |                              ^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(72): a { backdrop-filter: opacity(150%); } 1`] = `

  1 | a { backdrop-filter: opacity(150%); }

`;

exports[`invalid(72): a { backdrop-filter: opacity(150%); } 2`] = `

Message:
> 1 | a { backdrop-filter: opacity(150%); }
    |                              ^^^^ 'opacity() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(73): a { backdrop-filter: opacity(calc(-1)); } 1`] = `

  1 | a { backdrop-filter: opacity(calc(-1)); }

`;

exports[`invalid(73): a { backdrop-filter: opacity(calc(-1)); } 2`] = `

Message:
> 1 | a { backdrop-filter: opacity(calc(-1)); }
    |                              ^^^^^^^^ 'opacity() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(74): a { backdrop-filter: opacity(calc(25 + 25)); } 1`] = `

  1 | a { backdrop-filter: opacity(calc(25 + 25)); }

`;

exports[`invalid(74): a { backdrop-filter: opacity(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { backdrop-filter: opacity(calc(25 + 25)); }
    |                              ^^^^^^^^^^^^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(75): a { -webkit-backdrop-filter: opacity(50); } 1`] = `

  1 | a { -webkit-backdrop-filter: opacity(50); }

`;

exports[`invalid(75): a { -webkit-backdrop-filter: opacity(50); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: opacity(50); }
    |                                      ^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(76): a { -webkit-backdrop-filter: opacity(150%); } 1`] = `

  1 | a { -webkit-backdrop-filter: opacity(150%); }

`;

exports[`invalid(76): a { -webkit-backdrop-filter: opacity(150%); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: opacity(150%); }
    |                                      ^^^^ 'opacity() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(77): a { -webkit-backdrop-filter: opacity(calc(-1)); } 1`] = `

  1 | a { -webkit-backdrop-filter: opacity(calc(-1)); }

`;

exports[`invalid(77): a { -webkit-backdrop-filter: opacity(calc(-1)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: opacity(calc(-1)); }
    |                                      ^^^^^^^^ 'opacity() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(78): a { -webkit-backdrop-filter: opacity(calc(25 + 25)); } 1`] = `

  1 | a { -webkit-backdrop-filter: opacity(calc(25 + 25)); }

`;

exports[`invalid(78): a { -webkit-backdrop-filter: opacity(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: opacity(calc(25 + 25)); }
    |                                      ^^^^^^^^^^^^^ 'opacity() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(79): a { filter: sepia(50); } 1`] = `

  1 | a { filter: sepia(50); }

`;

exports[`invalid(79): a { filter: sepia(50); } 2`] = `

Message:
> 1 | a { filter: sepia(50); }
    |                   ^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(8): a { fill-opacity: -1; } 1`] = `

  1 | a { fill-opacity: -1; }

`;

exports[`invalid(8): a { fill-opacity: -1; } 2`] = `

Message:
> 1 | a { fill-opacity: -1; }
    |                   ^^ 'fill-opacity' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(80): a { filter: sepia(150%); } 1`] = `

  1 | a { filter: sepia(150%); }

`;

exports[`invalid(80): a { filter: sepia(150%); } 2`] = `

Message:
> 1 | a { filter: sepia(150%); }
    |                   ^^^^ 'sepia() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(81): a { filter: sepia(calc(-1)); } 1`] = `

  1 | a { filter: sepia(calc(-1)); }

`;

exports[`invalid(81): a { filter: sepia(calc(-1)); } 2`] = `

Message:
> 1 | a { filter: sepia(calc(-1)); }
    |                   ^^^^^^^^ 'sepia() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(82): a { filter: sepia(calc(25 + 25)); } 1`] = `

  1 | a { filter: sepia(calc(25 + 25)); }

`;

exports[`invalid(82): a { filter: sepia(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { filter: sepia(calc(25 + 25)); }
    |                   ^^^^^^^^^^^^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(83): a { backdrop-filter: sepia(50); } 1`] = `

  1 | a { backdrop-filter: sepia(50); }

`;

exports[`invalid(83): a { backdrop-filter: sepia(50); } 2`] = `

Message:
> 1 | a { backdrop-filter: sepia(50); }
    |                            ^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(84): a { backdrop-filter: sepia(150%); } 1`] = `

  1 | a { backdrop-filter: sepia(150%); }

`;

exports[`invalid(84): a { backdrop-filter: sepia(150%); } 2`] = `

Message:
> 1 | a { backdrop-filter: sepia(150%); }
    |                            ^^^^ 'sepia() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(85): a { backdrop-filter: sepia(calc(-1)); } 1`] = `

  1 | a { backdrop-filter: sepia(calc(-1)); }

`;

exports[`invalid(85): a { backdrop-filter: sepia(calc(-1)); } 2`] = `

Message:
> 1 | a { backdrop-filter: sepia(calc(-1)); }
    |                            ^^^^^^^^ 'sepia() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(86): a { backdrop-filter: sepia(calc(25 + 25)); } 1`] = `

  1 | a { backdrop-filter: sepia(calc(25 + 25)); }

`;

exports[`invalid(86): a { backdrop-filter: sepia(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { backdrop-filter: sepia(calc(25 + 25)); }
    |                            ^^^^^^^^^^^^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(87): a { -webkit-backdrop-filter: sepia(50); } 1`] = `

  1 | a { -webkit-backdrop-filter: sepia(50); }

`;

exports[`invalid(87): a { -webkit-backdrop-filter: sepia(50); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: sepia(50); }
    |                                    ^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(88): a { -webkit-backdrop-filter: sepia(150%); } 1`] = `

  1 | a { -webkit-backdrop-filter: sepia(150%); }

`;

exports[`invalid(88): a { -webkit-backdrop-filter: sepia(150%); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: sepia(150%); }
    |                                    ^^^^ 'sepia() amount' evaluates to 150%, which the browser clamps to 100%.

`;

exports[`invalid(89): a { -webkit-backdrop-filter: sepia(calc(-1)); } 1`] = `

  1 | a { -webkit-backdrop-filter: sepia(calc(-1)); }

`;

exports[`invalid(89): a { -webkit-backdrop-filter: sepia(calc(-1)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: sepia(calc(-1)); }
    |                                    ^^^^^^^^ 'sepia() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(9): a { fill-opacity: 2; } 1`] = `

  1 | a { fill-opacity: 2; }

`;

exports[`invalid(9): a { fill-opacity: 2; } 2`] = `

Message:
> 1 | a { fill-opacity: 2; }
    |                   ^ 'fill-opacity' evaluates to 2, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(90): a { -webkit-backdrop-filter: sepia(calc(25 + 25)); } 1`] = `

  1 | a { -webkit-backdrop-filter: sepia(calc(25 + 25)); }

`;

exports[`invalid(90): a { -webkit-backdrop-filter: sepia(calc(25 + 25)); } 2`] = `

Message:
> 1 | a { -webkit-backdrop-filter: sepia(calc(25 + 25)); }
    |                                    ^^^^^^^^^^^^^ 'sepia() amount' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(91): a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); } 1`] = `

  1 | a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); }

`;

exports[`invalid(91): a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); } 2`] = `

Message:
> 1 | a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); }
    |                        ^^^^^^^^ 'brightness() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(91): a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); } 3`] = `

Message:
> 1 | a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); }
    |                                           ^^^^^^^^ 'contrast() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(91): a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); } 4`] = `

Message:
> 1 | a { filter: brightness(calc(-1)) contrast(calc(-1)) saturate(calc(-1)); }
    |                                                              ^^^^^^^^ 'saturate() amount' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(92): a { color: rgb(300 0 0); } 1`] = `

  1 | a { color: rgb(300 0 0); }

`;

exports[`invalid(92): a { color: rgb(300 0 0); } 2`] = `

Message:
> 1 | a { color: rgb(300 0 0); }
    |                ^^^ 'rgb() red' evaluates to 300, which the browser clamps to 255.

`;

exports[`invalid(93): a { color: rgb(-1 0 0); } 1`] = `

  1 | a { color: rgb(-1 0 0); }

`;

exports[`invalid(93): a { color: rgb(-1 0 0); } 2`] = `

Message:
> 1 | a { color: rgb(-1 0 0); }
    |                ^^ 'rgb() red' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(94): a { color: rgb(101% 0% 0%); } 1`] = `

  1 | a { color: rgb(101% 0% 0%); }

`;

exports[`invalid(94): a { color: rgb(101% 0% 0%); } 2`] = `

Message:
> 1 | a { color: rgb(101% 0% 0%); }
    |                ^^^^ 'rgb() red' evaluates to 101%, which the browser clamps to 100%.

`;

exports[`invalid(95): a { color: rgb(0 0 0 / 50); } 1`] = `

  1 | a { color: rgb(0 0 0 / 50); }

`;

exports[`invalid(95): a { color: rgb(0 0 0 / 50); } 2`] = `

Message:
> 1 | a { color: rgb(0 0 0 / 50); }
    |                        ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(96): a { color: rgba(0, 0, 0, 50); } 1`] = `

  1 | a { color: rgba(0, 0, 0, 50); }

`;

exports[`invalid(96): a { color: rgba(0, 0, 0, 50); } 2`] = `

Message:
> 1 | a { color: rgba(0, 0, 0, 50); }
    |                          ^^ 'rgba() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(97): a { color: hsla(0, 50%, 50%, -1); } 1`] = `

  1 | a { color: hsla(0, 50%, 50%, -1); }

`;

exports[`invalid(97): a { color: hsla(0, 50%, 50%, -1); } 2`] = `

Message:
> 1 | a { color: hsla(0, 50%, 50%, -1); }
    |                              ^^ 'hsla() alpha' evaluates to -1, which the browser clamps to 0.

`;

exports[`invalid(98): a { color: rgb(var(--channels) / 50); } 1`] = `

  1 | a { color: rgb(var(--channels) / 50); }

`;

exports[`invalid(98): a { color: rgb(var(--channels) / 50); } 2`] = `

Message:
> 1 | a { color: rgb(var(--channels) / 50); }
    |                                  ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;

exports[`invalid(99): a { color: rgb(from red r g b / 50); } 1`] = `

  1 | a { color: rgb(from red r g b / 50); }

`;

exports[`invalid(99): a { color: rgb(from red r g b / 50); } 2`] = `

Message:
> 1 | a { color: rgb(from red r g b / 50); }
    |                                 ^^ 'rgb() alpha' evaluates to 50, which the browser clamps to 1. Did you mean a percentage?

`;
